<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Indicaciones">


    <EditText
        android:id="@+id/textosiembra1indica"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Ninguna"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textofertindica"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <EditText
        android:id="@+id/textofertindica"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Ninguna"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textobichosindica"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logobichos" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/logofertilizar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/logosiembra" />

    <Button
        android:id="@+id/botonpublicar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="655dp"
        android:background="@drawable/botonterminar"
        android:onClick="regreso"
        android:text="@string/regresar"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textobichosindica"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Ninguna"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <EditText
        android:id="@+id/textosiembra2indica"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Ninguna"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textosiembra1indica"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/logosiembra" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Indicaciones"
        android:textAlignment="center"
        android:background="@color/teal_700"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="177dp" />

    <CheckBox
        android:id="@+id/checkboxbichos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:text="@string/Hecha"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textobichosindica"
        app:layout_constraintTop_toBottomOf="@+id/textobichosindica" />

    <CheckBox
        android:id="@+id/checkboxfert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:text="@string/Hecha"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textofertindica"
        app:layout_constraintTop_toBottomOf="@+id/textofertindica" />

    <CheckBox
        android:id="@+id/checkboxcult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:text="@string/Hecha"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textosiembra1indica"
        app:layout_constraintTop_toBottomOf="@+id/textosiembra1indica" />

    <CheckBox
        android:id="@+id/chechboxcult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:text="@string/Hecha"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textosiembra2indica"
        app:layout_constraintTop_toBottomOf="@+id/textosiembra2indica" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_color"
        android:onClick="reportarfun"
        android:text="@string/Reportar"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botonpublicar"
        app:layout_constraintStart_toStartOf="@+id/botonpublicar" />
</androidx.constraintlayout.widget.ConstraintLayout>